# Bittorrent

./: CMakeLists.txt  conanfile.txt
app/: main.cpp
include/: TorrentFileParser.hpp
include/Bencode/: BencodeFile.hpp  BencodeParser.hpp  CanBeBuiltFromBencodeData.hpp
include/Bencode/Exceptions/: NoSuchFieldException.hpp
include/Bittorrent/: BitTorrentIdentity.hpp  BitTorrentPiece.hpp  BittorrentMessageBuilder.hpp  BittorrentMessageType.hpp  Block.hpp  MessageHandler.hpp  Peer.hpp  PeerInfo.hpp  PeerStatus.hpp  Torrent.hpp  TorrentFile.hpp  TorrentFileBuilder.hpp  TorrentFileStatus.hpp  TorrentInfo.hpp  TorrentManager.hpp  TrackerResponse.hpp
include/Bittorrent/BittorrentMessages/: BitTorrentMessageTypeConverter.hpp  Bitfield.hpp  BitfieldReader.hpp  BittorrentMessage.hpp  BittorrentMessageBuilder.hpp  BittorrentMessageParser.hpp  BittorrentMessageType.hpp  Cancel.hpp  Choke.hpp  ConverterArgsToPayloadString.hpp  HandshakeMessageBuilder.hpp  Have.hpp  IBittorrentMessage.hpp  IBittorrentMessageBuildable.hpp  Interested.hpp  KeepAlive.hpp  NotInterested.hpp  Piece.hpp  Port.hpp  Request.hpp  Unchoke.hpp
include/FileReader/: FileReader.hpp  NoSuchFileException.hpp  WrongPathException.hpp
include/Inet/: InetService.hpp  RequestBuilder.hpp  RequestSender.hpp
include/Logger/: ILogger.hpp  Logger.hpp  LoggerSpdlog.hpp
include/Utils/: ByteMethods.hpp  FileWriter.hpp  HashMethods.hpp  StringMethods.hpp  Timer.hpp  UrlMethods.hpp
src/: CMakeLists.txt  TorrentFileParser.cpp
src/Bencode/: BencodeFile.cpp  BencodeParser.cpp  CMakeLists.txt
src/Bencode/Exceptions/: NoSuchFieldException.cpp
src/Bittorrent/: BitTorrentIdentity.cpp  BitTorrentPiece.cpp  BittorrentMessageBuilder.cpp  CMakeLists.txt  MessageHandler.cpp  Peer.cpp  PeerInfo.cpp  Torrent.cpp  TorrentFile.cpp  TrackerResponse.cpp
src/Bittorrent/BittorrentMessages/: BitTorrentMessageParser.cpp  BitTorrentMessageTypeConverter.cpp  BitfieldReader.cpp  BittorrentMessage.cpp  BittorrentMessageBuilder.cpp  HandshakeMessageBuilder.cpp
src/FileReader/: CMakeLists.txt  FileReader.cpp  NoSuchFileException.cpp  WrongPathException.cpp
src/Inet/: CMakeLists.txt  InetService.cpp  RequestBuilder.cpp  RequestSender.cpp
src/Logger/: CMakeLists.txt  Logger.cpp  LoggerSpdlog.cpp
src/Utils/: ByteMethods.cpp  CMakeLists.txt  FileWriter.cpp  HashMethods.cpp  StringMethods.cpp  Timer.cpp  UrlMethods.cpp
tests/: BencodeParsingTests.hpp  CMakeLists.txt  FileReaderTests.hpp  LoggerTests.hpp  StringOperationsTest.hpp  TorrentFileParserTests.hpp  main_test.cpp  test.txt
tests/BencodeTests/: BencodeFileTests.hpp
tests/BittorrentTests/: BitTorrentPieceTests.hpp  BitfieldReaderTest.hpp  BittorrentMessageBuilderTests.hpp  BittorrentMessageParserTests.hpp  BittorrentMessageTests.hpp  HandshakeMessageBuilderTests.hpp  MessageHandlerTests.hpp  TorrentFileTests.hpp  test.torrent
tests/UtilsTests/: ByteMethodsTest.hpp  HashMethodsTest.hpp  StringOperationsTest.hpp  TimerTests.hpp  UrlMethodsTest.hpp
